--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -1,23 +1,18 @@
 <!-- ============================================ -->
-<!--             Final Call to Action             -->
+<!--                Call To Action                -->
 <!-- ============================================ -->
 
-<section id="cta">
-    <div class="container">
-        <h2 class="title">
-            Get It Done
-            <br/>
-            With Us Today
-        </h2>
-        <p>
-            Say something catchy, informative, and encouraging to click the button to go to the contact page. I like to add these to the bottom of all pages.
-        </p>
-        <a href="/contact" class="cs-button-solid">Get an Estimate Now</a>
+<section id="cta-2372">
+    <div class="cs-container">
+        <div class="cs-content">
+            <h2 class="cs-title">Start Your Journey Towards Success Today</h2>
+            <p class="cs-text">
+                Receive expert support and compassionate care tailored to your needs, along with a personalized therapy plan designed to fit seamlessly into your life.
+            </p>
+            <a href="" class="cs-button-solid">Schedule Your Consultation</a>
+        </div>
+        <img class="cs-graphic" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/healing-hands.svg" alt="graphic" loading="lazy" decoding="async" width="490" height="451">
+        <img class="cs-floater" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/flower2.svg" alt="flower blur" width="851" height="991" aria-hidden="true">
     </div>
-    <picture>
-        <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-        <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="lazy" width="2500" height="1667">
-    </picture>
-
 </section>
+                                
