--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -6,7 +6,7 @@
     <div class="cs-container">
         <!--Nav Logo-->
         <!--Logo is turned white in the css with a filter on dark mode-->
-        <a href="" class="cs-logo" aria-label="back to home">
+        <a href="/" class="cs-logo" aria-label="back to home">
             <img src="/assets/svgs/logo-black.svg" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
         </a>
         <!--Navigation List-->
@@ -23,12 +23,12 @@
             <div class="cs-ul-wrapper">
                 <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                     <li class="cs-li">
-                        <a href="" class="cs-li-link cs-active">
+                        <a href="/" class="cs-li-link cs-active">
                             Home
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="" class="cs-li-link">
+                        <a href="/about" class="cs-li-link">
                             About
                         </a>
                     </li>
@@ -38,12 +38,12 @@
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="" class="cs-li-link">
+                        <a href="/blog" class="cs-li-link">
                             Blog
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="" class="cs-li-link">
+                        <a href="/contact" class="cs-li-link">
                             Contact
                         </a>
                     </li>
@@ -53,7 +53,7 @@
         <div class="cs-contact-group">
             <a href="tel:+84 1985 33 999" class="cs-phone">
                 <img class="cs-phone-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/phone-1a.svg" alt="logo" width="24" height="24" aria-hidden="true" decoding="async">
-                +84 1985 33 999
+                (918) 260-5366
             </a>
             <div class="cs-social">
                 <a href="" class="cs-social-link">
