--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -1,4 +1,375 @@
 /*-- -------------------------- -->
+<---          Projects          -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #projects-604 {
+    padding: var(--sectionPadding);
+  }
+  #projects-604 .cs-container {
+    width: 100%;
+    max-width: 80rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+  }
+  #projects-604 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: left;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: flex-start;
+  }
+  #projects-604 .cs-card-group {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 16px - 20px */
+    gap: clamp(1rem, 1.8vw, 1.25rem);
+    row-gap: 2.5rem;
+  }
+  #projects-604 .cs-item {
+    list-style: none;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  #projects-604 .cs-info {
+    width: 100%;
+    /* 350px - 450px */
+    min-height: clamp(21.875rem, 34vw, 28.125rem);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    /* 32px - 100px top */
+    /* 16px - 24px left & right */
+    padding: clamp(2rem, 8vw, 6.25rem) clamp(1rem, 1.8vw, 1.5rem) 6.25rem;
+    border-radius: 0.5rem;
+    /* clips the img tag corners */
+    overflow: hidden;
+    /* prevents padding and border from affecting height and width */
+    box-sizing: border-box;
+    position: relative;
+  }
+  #projects-604 .cs-link {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+  #projects-604 .cs-link:hover .cs-header,
+  #projects-604 .cs-link:focus .cs-header,
+  #projects-604 .cs-link:hover .cs-item-text,
+  #projects-604 .cs-link:focus .cs-item-text {
+    visibility: visible;
+    transform: translateY(0);
+    opacity: 1;
+    height: 100%;
+    transition: transform 0.6s, visibility 0.3s, opacity 0.6s;
+  }
+  #projects-604 .cs-link:hover .cs-number,
+  #projects-604 .cs-link:focus .cs-number {
+    padding-bottom: 0.9375rem;
+  }
+  #projects-604 .cs-link:hover .cs-number:before,
+  #projects-604 .cs-link:focus .cs-number:before {
+    width: 50rem;
+    height: 31.25rem;
+    opacity: 0.9;
+  }
+  #projects-604 .cs-link:hover .cs-background img,
+  #projects-604 .cs-link:focus .cs-background img {
+    transform: scale(1.1);
+  }
+  #projects-604 .cs-header {
+    /* 28px - 40px */
+    font-size: clamp(1.75rem, 3.2vw, 2.5rem);
+    line-height: 1.2em;
+    font-weight: 700;
+    height: 0;
+    /* 16px - 24px bottom */
+    margin: 0 0 clamp(1rem, 1.8vw, 1.5rem);
+    color: var(--bodyTextColorWhite);
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(2.5rem);
+    transition: transform 0.2s, visibility 0.1s, opacity 0.2s, height 0.4s;
+    transition-delay: 0.1s;
+  }
+  #projects-604 .cs-item-text {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 1.5vw, 1rem);
+    line-height: 1.5em;
+    text-align: left;
+    width: 100%;
+    max-width: 25rem;
+    height: 0;
+    margin: 0;
+    color: var(--bodyTextColorWhite);
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(6.25rem);
+    transition: transform 0.3s, visibility 0.3s, opacity 0.3s, height 0.4s;
+    transition-delay: 0.2s;
+  }
+  #projects-604 .cs-number {
+    /* 24px - 32px */
+    font-size: clamp(1.5rem, 2vw, 2rem);
+    /* 60px - 80px */
+    line-height: clamp(3.75rem, 9vw, 5rem);
+    font-weight: 700;
+    width: clamp(3.75rem, 7vw, 5rem);
+    height: clamp(3.75rem, 7vw, 5rem);
+    margin: 0;
+    padding: 0;
+    color: var(--bodyTextColorWhite);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: padding-bottom 0.3s;
+  }
+  #projects-604 .cs-number:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: var(--primary);
+    opacity: 1;
+    position: absolute;
+    display: block;
+    bottom: 0;
+    left: 0;
+    transition: width 0.6s, height 0.6s, opacity 0.3s;
+    z-index: -1;
+  }
+  #projects-604 .cs-h3 {
+    /* 20px - 24px */
+    font-size: clamp(1.25rem, 2.5vw, 1.5rem);
+    line-height: 1.2em;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+    color: var(--headerColor);
+    display: block;
+  }
+  #projects-604 .cs-background {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    /* clips img tag when it scales on hover */
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #projects-604 .cs-background img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: transform 0.8s;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #projects-604 .cs-content {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #projects-604 .cs-flex-group {
+    width: 45%;
+  }
+  #projects-604 .cs-text {
+    width: 48vw;
+  }
+  #projects-604 .cs-card-group {
+    flex-direction: row;
+    align-items: stretch;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  #projects-604 .cs-item {
+    width: clamp(31.86%, 30vw, 32.28%);
+  }
+}
+/*-- -------------------------- -->
+<---          Services          -->
+<--- -------------------------- -*/
+/* Mobile - 360px- Contains Hover State */
+@media only screen and (min-width: 0rem) {
+  #services-29 {
+    padding: var(--sectionPadding);
+  }
+  #services-29 .cs-container {
+    width: 100%;
+    /* changes to 1280px at tablet */
+    max-width: 34.375rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+  }
+  #services-29 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
+  }
+  #services-29 .cs-card-group {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+  #services-29 .cs-item {
+    list-style: none;
+    margin: 0;
+    width: 100%;
+  }
+  #services-29 .cs-item:hover .cs-picture:before {
+    height: 100%;
+  }
+  #services-29 .cs-item:hover .cs-picture img {
+    transform: scale(1.1);
+  }
+  #services-29 .cs-picture {
+    /* height divided by width */
+    aspect-ratio: 328/220;
+    position: relative;
+    display: block;
+    /* Keeps image from bleeding outside the picture element */
+    overflow: hidden;
+  }
+  #services-29 .cs-picture:before {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 0%;
+    width: 100%;
+    background: var(--primary);
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: height 0.3s;
+  }
+  #services-29 .cs-picture img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /* Makes img tag act like a background image */
+    object-fit: cover;
+    transition: transform 0.7s;
+  }
+  #services-29 .cs-box {
+    /* Centers the button */
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    /* -32px to 48px */
+    margin-top: clamp(-2rem, 7vw, -3rem);
+    /* 24px to 28px */
+    padding-top: clamp(1.5rem, 2.4vw, 1.75rem);
+    background: #fff;
+    position: relative;
+    z-index: 10;
+  }
+  #services-29 .cs-h3 {
+    /* 20px - 25px */
+    font-size: clamp(1.25rem, 2vw, 1.5625rem);
+    text-align: center;
+    line-height: 1.2em;
+    font-weight: bold;
+    color: var(--headerColor);
+    /* 24px to 28px */
+    margin: 0 0 clamp(1.5rem, 2.4vw, 1.75rem);
+  }
+  #services-29 .cs-button-transparent {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875em, 5.5vw, 3.5em);
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+    margin: auto;
+    color: var(--primary);
+    min-width: 9.375rem;
+    padding: 0 1.5rem;
+    background-color: transparent;
+    border: 1px solid var(--primary);
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+    transition: color 0.3s;
+  }
+  #services-29 .cs-button-transparent:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background: var(--primary);
+    opacity: 1;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: width 0.3s;
+  }
+  #services-29 .cs-button-transparent:hover {
+    color: #fff;
+  }
+  #services-29 .cs-button-transparent:hover:before {
+    width: 100%;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #services-29 .cs-container {
+    max-width: 80rem;
+  }
+  #services-29 .cs-card-group {
+    flex-direction: row;
+    align-items: center;
+  }
+  #services-29 .cs-item {
+    width: 32.3%;
+    max-width: 25.8125rem;
+    margin: 0;
+  }
+  #services-29 .cs-picture {
+    /* Reset aspect ratio, don't need it anymore */
+    aspect-ratio: initial;
+    /* 240px - 420px */
+    height: clamp(15rem, 31.5vw, 26.25rem);
+  }
+}
+/*-- -------------------------- -->
 <---        Recent Posts        -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
@@ -48,6 +419,7 @@
     display: flex;
     flex-direction: column;
     grid-column: span 12;
+    transition: background-color 30s;
   }
   #blog-1347 .cs-item:hover .cs-h3,
   #blog-1347 .cs-item:hover .cs-date,
@@ -71,6 +443,10 @@
     background-color: #fff;
     opacity: 0.2;
   }
+  #blog-1347 .cs-item:hover:hover img {
+    opacity: 0.4;
+    transform: scale(1.3);
+  }
   #blog-1347 .cs-link {
     text-decoration: none;
     display: flex;
@@ -88,6 +464,7 @@
     position: relative;
     z-index: 1;
     overflow: hidden;
+    border: 1px solid #ccc;
   }
   #blog-1347 .cs-picture img {
     width: 100%;
@@ -96,6 +473,20 @@
     position: absolute;
     top: 0;
     left: 0;
+    transition: transform 0.6s;
+  }
+  #blog-1347 .cs-picture img:hover {
+    background-color: var(--primary);
+  }
+  #blog-1347 .cs-picture:hover {
+    background-color: var(--primary);
+  }
+  #blog-1347 .cs-picture:hover:before {
+    background-color: var(--primary);
+    opacity: 0.84;
+  }
+  #blog-1347 .cs-picture:hover img {
+    transform: scale(1.2);
   }
   #blog-1347 .cs-item-text {
     padding: 1.25rem;
@@ -253,5 +644,223 @@
   #blog-1347 .cs-bubbles {
     margin-right: -61.875rem;
     right: 50%;
+  }
+}
+/*-- -------------------------- -->
+<---           Stats            -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #stats-5 {
+    padding: var(--sectionPadding);
+    position: relative;
+    z-index: 1;
+  }
+  #stats-5 .cs-container {
+    width: 100%;
+    max-width: 80rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+  }
+  #stats-5 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: left;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: left;
+  }
+  #stats-5 .cs-text {
+    font-size: var(--bodyFontSize);
+    line-height: 1.5em;
+    text-align: inherit;
+    width: 100%;
+    max-width: 40.625rem;
+    margin: 0;
+    color: var(--bodyTextColor);
+  }
+  #stats-5 .cs-topper {
+    display: block;
+    margin-bottom: 0.25rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-size: var(--headerFontSize);
+    line-height: 1.2em;
+    font-weight: 700;
+    color: var(--bodyTextColorWhite);
+    text-align: left;
+  }
+  #stats-5 .cs-title {
+    position: relative;
+    margin: 0 0 1rem 0;
+    max-width: 43.75rem;
+    font-size: var(--headerFontSize);
+    line-height: 1.2em;
+    font-weight: 900;
+    color: var(--primaryLight);
+    text-align: left;
+  }
+  #stats-5 .cs-text {
+    color: var(--bodyTextColorWhite);
+    opacity: 0.8;
+  }
+  #stats-5 .cs-card-group {
+    width: 100%;
+    max-width: 31.25rem;
+    padding: 0 1.25rem;
+    /* 40px - 68px */
+    padding-top: clamp(2.5rem, 5.7vw, 4.25rem);
+    /* 48px - 80px */
+    padding-bottom: clamp(3rem, 6.5vw, 5rem);
+    margin: 0;
+    background: #fff;
+    border-top: 8px solid var(--primaryLight);
+    border-radius: 0.3125rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 3.4375em;
+    box-shadow: 0 1.25em 2.5em 0 rgba(0, 0, 0, 0.05);
+    /* prevents padding from adding to the width of the container */
+    box-sizing: border-box;
+  }
+  #stats-5 .cs-item {
+    text-align: center;
+    list-style: none;
+    width: 100%;
+  }
+  #stats-5 .cs-number {
+    /* 39px - 61px */
+    font-size: clamp(2.4375rem, 4.7vw, 3.8125rem);
+    font-weight: 700;
+    line-height: 1.2em;
+    /* 4px - 8px */
+    margin-bottom: clamp(0.25rem, 0.78vw, 0.5rem);
+    color: var(--primaryLight);
+    display: block;
+  }
+  #stats-5 .cs-header {
+    /* 16px - 25px */
+    font-size: clamp(1rem, 2vw, 1.5625rem);
+    font-weight: 700;
+    line-height: 1.2em;
+    color: var(--headerColor);
+  }
+  #stats-5 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+    min-width: 9.375rem;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    border-radius: 0.25rem;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+  }
+  #stats-5 .cs-button-solid:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background: #000;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 0.25rem;
+    transition: width 0.3s;
+  }
+  #stats-5 .cs-button-solid:hover:before {
+    width: 100%;
+  }
+  #stats-5 .cs-background {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 65%;
+    z-index: -1;
+  }
+  #stats-5 .cs-background:before {
+    /* Overlay */
+    content: "";
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background: #000;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  #stats-5 .cs-background img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
+/* In-between - 500px */
+@media only screen and (min-width: 31.25rem) {
+  #stats-5 .cs-card-group {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 0;
+    row-gap: 3.4375rem;
+    column-gap: 6.25rem;
+  }
+  #stats-5 .cs-item {
+    /* sets even spacing */
+    width: 7.8125rem;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #stats-5:before {
+    height: 37.5%;
+  }
+  #stats-5 .cs-card-group {
+    max-width: 100%;
+    column-gap: 0;
+    row-gap: 0;
+    justify-content: space-around;
+  }
+  #stats-5 .cs-item {
+    /* reset width */
+    width: auto;
+  }
+}
+/* Big Desktop Parallax Effect - 1300px */
+@media only screen and (min-width: 81.25rem) {
+  #stats-5 .cs-background {
+    background: url("/assets/images/tulsa.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+  #stats-5 .cs-background img {
+    display: none;
   }
 }
