--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -804,121 +804,142 @@
   }
 }
 /*-- -------------------------- -->
-<---    Final Call To Action    -->
+<---      Call To Action        -->
 <--- -------------------------- -*/
-/* Mobile */
+/* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #cta {
-    position: relative;
-    padding: 3.125rem 0;
+  #cta-2372 {
+    padding: var(--sectionPadding);
   }
-  #cta .container {
-    text-align: center;
-  }
-  #cta picture {
-    z-index: -2;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
+  #cta-2372 .cs-container {
     width: 100%;
-  }
-  #cta picture img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-  }
-  #cta .title {
-    position: relative;
-    margin-bottom: 2.25rem;
-    font-size: min(9vw, 3rem);
-    line-height: 1.20833333em;
-    font-weight: 900;
-    color: #fff;
-    text-align: center;
-  }
-  #cta p {
-    opacity: 1;
+    max-width: 80rem;
     margin: auto;
-    margin-bottom: 2.25rem;
-    max-width: 37.375rem;
-    width: 96%;
-    color: #fff;
-    text-align: center;
-  }
-  #cta:before {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "";
-    opacity: 0.7;
-    display: block;
-    background: #000;
-    height: 100%;
-    width: 100%;
-  }
-}
-/* Small Desktop */
-@media only screen and (min-width: 64rem) {
-  #cta {
-    padding: 10.5rem 0;
-  }
-}
-/* Large Desktop */
-@media only screen and (min-width: 1300px) {
-  #cta {
+    padding: clamp(2rem, 8vw, 3.75rem) clamp(1rem, 6vw, 6.75rem) 0;
+    background-color: #08101A;
+    border-radius: 1rem;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
     position: relative;
-    margin-top: 6.25rem;
-  }
-  #cta .container {
-    margin: auto;
-    width: 90.0625%;
-  }
-  #cta picture {
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90.0625%;
-  }
-  #cta picture:before {
     z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "";
-    opacity: 0.7;
-    display: block;
-    background: #000;
-    height: 100%;
+  }
+  #cta-2372 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: left;
     width: 100%;
+    max-width: 36.25rem;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: flex-start;
   }
-  #cta:before {
-    display: none;
+  #cta-2372 .cs-title {
+    text-align: inherit;
+    margin-bottom: 2rem;
+    /* 48px - 64px */
+    padding-bottom: clamp(3rem, 6vw, 4rem);
+    color: var(--bodyTextColorWhite);
+    position: relative;
+    z-index: 1;
   }
-  #cta:after {
-    z-index: -3;
+  #cta-2372 .cs-title:before {
+    content: '';
+    width: 100vw;
+    height: 1px;
+    background: #D2D8DF;
+    opacity: 0.2;
+    display: block;
     position: absolute;
     bottom: 0;
-    left: 50%;
-    content: "";
+    left: 0;
+  }
+  #cta-2372 .cs-text {
+    margin-bottom: 1rem;
+    color: var(--bodyTextColorWhite);
+  }
+  #cta-2372 .cs-text:last-of-type {
+    margin-bottom: 2rem;
+  }
+  #cta-2372 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875em, 5.5vw, 3.5em);
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+    min-width: 9.375rem;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    border-radius: 6.25rem;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+  }
+  #cta-2372 .cs-button-solid:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background: #000;
     opacity: 1;
-    transform: translateX(-50%);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 0.25rem;
+    transition: width 0.3s;
+  }
+  #cta-2372 .cs-button-solid:hover:before {
+    width: 100%;
+  }
+  #cta-2372 .cs-graphic {
+    width: 100%;
+    max-width: 30.625rem;
+    height: auto;
     display: block;
-    background: url("/assets/svgs/cta-squares.svg");
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 69.25rem;
-    width: 125rem;
+  }
+  #cta-2372 .cs-floater {
+    width: 53.1875rem;
+    height: auto;
+    background-blend-mode: hard-light;
+    opacity: 0.54;
+    filter: blur(80px);
+    /* prevents the mouse from interacting wiht it */
+    pointer-events: none;
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: -1;
+    transform: translate(-50%, -50%);
   }
 }
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-  body.dark-mode #cta:after {
-    display: none;
+/* Tablet - 700px */
+@media only screen and (min-width: 43.75rem) {
+  #cta-2372 .cs-container {
+    padding-bottom: 3.75rem;
+    flex-direction: row;
+    align-items: flex-end;
+  }
+  #cta-2372 .cs-content {
+    width: 45vw;
+  }
+  #cta-2372 .cs-graphic {
+    width: 40vw;
+    position: absolute;
+    bottom: 0rem;
+    right: 1.125rem;
+    z-index: 1;
   }
 }
 /*-- -------------------------- -->
@@ -990,7 +1011,7 @@
     transition: color 0.3s;
   }
   #footer .right-section .lists ul li a:hover {
-    color: var(--primary);
+    color: var(--primaryl);
   }
   #footer .right-section .lists ul h2 {
     position: relative;
@@ -1046,7 +1067,7 @@
   #footer .credit a {
     text-decoration: none;
     font-size: 1rem;
-    color: var(--primary);
+    color: var(--primaryLight);
   }
   #footer .credit a:hover {
     text-decoration: underline;
