--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -1,4 +1,3 @@
-
 /*-- -------------------------- -->
 <---           Hero             -->
 <--- -------------------------- -*/
@@ -39,7 +38,7 @@
 
         .cs-title {
             /* 39px - 61px */
-            font-size: clamp(3.4375rem, 5vw, 3.8125rem);
+            font-size: clamp(2.4375rem, 5vw, 3.8125rem);
             margin-bottom: (28/16rem);
             color: #fff;
         }
@@ -106,7 +105,7 @@
                 content: '';
                 width: 100%;
                 height: 100%;
-                background: linear-gradient(180deg, rgba(26, 26, 26, 0.86) 10.79%, rgba(26, 26, 26, 0.00) 48.32%, rgba(26, 26, 26, 0.86) 82.84%);
+                background: linear-gradient(180deg, rgba(26, 26, 26, 0.1) 10.79%, rgba(26, 26, 26, 0.00) 48.32%, rgba(26, 26, 26, 0.157) 82.84%);
                 /* prevents the cursor from interacting with it */
                 pointer-events: none;
                 display: block;
@@ -141,7 +140,6 @@
 
         .cs-title {
             width: 55%;
-            font-size: clamp(6.4375rem, 5vw, 3.8125rem);
             max-width: (630/16rem);
             margin-bottom: 0;
             /* prevents flexbox from squishing it */
@@ -157,14 +155,8 @@
 /* Large Desktop Parallax Effect - 100px */
 @media only screen and (min-width: 100rem) {
     #hero-1950 {
-        .cs-title {
-            /* 39px - 61px */
-            font-size: clamp(6.4375rem, 5vw, 3.8125rem);
-            margin-bottom: (28/16rem);
-            color: #fff;
-        }
         .cs-background {
-            background: url("/assets/images/david.jpg");
+            background: url("/assets/images/David.jpg");
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
@@ -177,4 +169,4 @@
         }
     }
 }
-   
+                                
